# ConfigILM

./: .buildinfo  .coverage  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  README_template.md  custom_fusion.html  generate_readme.py  genindex.html  ilmconfiguration.html  image_captioning.html  index.html  installation.html  latest_ci_run  objects.inv  py-modindex.html  pyproject.toml  references.html  search.html  searchindex.js  sup_pretraining.html  throughput_testing.html  timm_huggingface_vqa.py  vlmconfiguration.html  vqa.html  wip.html
.doctrees/: custom_fusion.doctree  environment.pickle  ilmconfiguration.doctree  image_captioning.doctree  index.doctree  installation.doctree  references.doctree  sup_pretraining.doctree  throughput_testing.doctree  vlmconfiguration.doctree  vqa.doctree  wip.doctree
.doctrees/API/: api_configilm.doctree  api_datasets.doctree  api_fusion.doctree  api_metrics.doctree  api_throughput.doctree  api_util.doctree
.doctrees/API/ds/: api_BEN_reader.doctree  api_ds_BEN.doctree  api_ds_BEN2.doctree  api_ds_BENv1.doctree  api_ds_BENv2.doctree  api_ds_COCOQA.doctree  api_ds_HRVQA.doctree  api_ds_RSVQAHR.doctree  api_ds_RSVQALR.doctree  api_ds_RSVQAxBEN.doctree
.doctrees/extra/: BEN_LMDB_Reader.doctree  BENv1_LMDB_Reader.doctree  DataSets and DataModules.doctree  bigearthnet.doctree  cocoqa.doctree  hrvqa.doctree  rsvqaxben.doctree
.doctrees/extra/DataSets and DataModules/: bigearthnet.doctree  bigearthnetv1.doctree  bigearthnetv2.doctree  cocoqa.doctree  hrvqa.doctree  rsvqa-hr.doctree  rsvqa-lr.doctree  rsvqaxben.doctree
.doctrees/general/: code_of_conduct.doctree  contributing.doctree  dependencies.doctree  license.doctree
.github/: CONTRIBUTING.md
.github/workflows/: build_docu.yml  ci.yml  run_tests.yml
API/: api_configilm.html  api_datasets.html  api_fusion.html  api_metrics.html  api_throughput.html  api_util.html
API/ds/: api_BEN_reader.html  api_ds_BEN.html  api_ds_BEN2.html  api_ds_BENv1.html  api_ds_BENv2.html  api_ds_COCOQA.html  api_ds_HRVQA.html  api_ds_RSVQAHR.html  api_ds_RSVQALR.html  api_ds_RSVQAxBEN.html
_sources/: ilmconfiguration.ipynb.txt  index.md.txt  installation.ipynb.txt  sup_pretraining.ipynb.txt  vqa.ipynb.txt
_sources/API/: api_configilm.md.txt  api_datasets.md.txt  api_fusion.md.txt
_sources/extra/: BEN_LMDB_Reader.ipynb.txt  DataSets and DataModules.md.txt  bigearthnet.ipynb.txt  cocoqa.ipynb.txt  hrvqa.ipynb.txt  rsvqaxben.ipynb.txt
_sources/extra/DataSets and DataModules/: bigearthnet.ipynb.txt  bigearthnetv1.ipynb.txt  bigearthnetv2.ipynb.txt  cocoqa.ipynb.txt  rsvqa-hr.ipynb.txt  rsvqa-lr.ipynb.txt  rsvqaxben.ipynb.txt
_static/: custom.css
configilm/: ConfigILM.py  __init__.py  metrics.py  util.py
configilm/Fusion/: AbstractFusion.py  BlockFusion.py  BlockTuckerFusion.py  ConcatMLPFusion.py  LinearSumFusion.py  MFBFusion.py  MFHFusion.py  MIDF.py  MIDFusion.py  MLBFusion.py  MutanFusion.py  TuckerFusion.py  blocks.py
configilm/Fusion/_old/: MIDFusion.py
configilm/baselines/: lit4rsvqa.py
configilm/extra/: BEN2DataSet.py  BEN2_DataModule.py  BENDataSet.py  BEN_DataModule.py  BEN_DataModule_LMDB_Encoder.py  BEN_lmdb_utils.py  BENv1_utils.py  BENv2_utils.py  COCOQA_DataModule.py  CustomTorchClasses.py  HRVQADataSet.py  HRVQA_DataModule.py  RSVQAxBEN_DataModule.py  RSVQAxBEN_DataModule_LMDB_Encoder.py  __init__.py  _defaults.py  data_dir.py
configilm/extra/DataModules/: BEN2_DataModule.py  BEN_DataModule.py  (+10 more)
configvlm/: ConfigVLM.py  __init__.py  util.py
configvlm/extra/: BEN_DataModule_LMDB_Encoder.py  BEN_lmdb_utils.py  COCOQA_DataModule.py  CustomTorchClasses.py  RSVQAxBEN_DataModule_LMDB_Encoder.py
docs/: bibliography.bib  conf.py  custom_fusion.ipynb  image_captioning.ipynb  image_captioning.md  index.md  installation.ipynb  installation.md  references.md  sup_pretraining.ipynb  sup_pretraining.md  throughput_testing.ipynb  vlmconfiguration.ipynb  vqa.ipynb  wip.md
docs/.ipynb_checkpoints/: sup_pretraining-checkpoint.ipynb  throughput_testing-checkpoint.ipynb  vqa-checkpoint.ipynb
docs/API/: api_configilm.md  api_datasets.md  api_metrics.md  api_throughput.md  api_util.md
docs/_build/: .gitignore
docs/extra/: BEN_LMDB_Reader.ipynb  BENv1_LMDB_Reader.ipynb  DataSets and DataModules.md  bigearthnet.ipynb  bigearthnet.md  cocoqa.ipynb  cocoqa.md  hrvqa.ipynb  rsvqaxben.ipynb  rsvqaxben.md
example_scripts/: BENLMDBReader_example.py  dataset_examples.py  get_mean_std_HRVQA.py  lit_train_classification.py  lit_train_classification_without_logging.py  lit_train_vqa.py  lit_train_vqa_without_logging.py  timm_huggingface_vqa.py  train_timm_huggingface_vqa.py
extra/: BEN_LMDB_Reader.html  BENv1_LMDB_Reader.html  DataSets and DataModules.html  bigearthnet.html  cocoqa.html  hrvqa.html  rsvqaxben.html
extra/DataSets and DataModules/: bigearthnet.html  bigearthnetv1.html  bigearthnetv2.html  cocoqa.html  hrvqa.html  rsvqa-hr.html  rsvqa-lr.html  rsvqaxben.html
general/: code_of_conduct.html  contributing.html  dependencies.html  license.html
scripts/: .gitignore  lit4rsvqa.py  lit_train_BENv2_wandb.py  lit_train_classification_no_logging.py  lit_train_vqa_no_logging.py  simple_throughput_test.py  simple_training_VQA.py  simple_training_classification.py  torch_train_classification.py
tests/: old_test_fusions.py  test_fusions.py  test_il_models.py  test_metrics.py  test_util.py  test_vl_models.py
tests/extra/: test_CustomTorchClasses.py  test_data_BEN.py  test_data_BEN2.py  test_data_BENv1.py  test_data_BENv2.py  test_data_COCO-QA.py  test_data_HRVQA.py  test_data_RSVQA-HR.py  test_data_RSVQA-LR.py  test_data_RSVQAxBEN.py  test_data_ThroughputTest.py  test_data_common.py  test_resolve_datadir.py
(+361 files in other folders)
