[tool.poetry]
name = "configvlm"
version = "0.1.1"
description = "A state-of-the-art tool for Python developers seeking to rapidly and iteratively develop vision and language models within the [`pytorch`](https://pytorch.org/) framework"
authors = ["Leonard Hackel <l.hackel@tu-berlin.de>"]
readme = "README.md"

# docs-deps-start
[tool.poetry.dependencies]
python = "^3.10"
torch = ">=1.13.1"
numpy = "^1.24.1"
timm = "^0.6.12"
transformers = "^4.26.0"
appdirs = "^1.4.4"
lmdb = { version = "^1.4.0", optional = true }
bigearthnet-encoder = { version = "^0.3.0", optional = true }
pytorch-lightning = { version = "^1.9.0", optional = true }
matplotlib = { version = "^3.6.3", optional = true }
scikit-learn = { version = "^1.2.1", optional = true }
lightning-bolts = { version = "^0.6.0.post1", optional = true }
fvcore = { version = "^0.1.5.post20221221", optional = true }

[tool.poetry.group.extra.dependencies]
lmdb = "^1.4.0"
bigearthnet-encoder = "^0.3.0"
pytorch-lightning = "^1.9.0"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.1"
lightning-bolts = "^0.6.0.post1"
fvcore = "^0.1.5.post20221221"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.1.0"
pre-commit = "^3.0.2"
pytest-mock = "^3.10.0"
furo = "^2022.03.23"
myst-nb = "^0.17.1"
sphinx-autobuild = "^2021.3.14"
sphinxcontrib-bibtex = "^2.5.0"
common-nb-preprocessors = "^1.1.1"
jupyterlab = "^3.6.1"
tensorboardx = "^2.6"
# docs-deps-end

[tool.poetry.group.example.dependencies]
wandb = "^0.13.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
