[tool.poetry]
name = "configilm"
version = "0.4.8"
description = "A state-of-the-art tool for Python developers seeking to rapidly and iteratively develop vision and language models within the [`pytorch`](https://pytorch.org/) framework"
authors = ["Leonard Hackel <l.hackel@tu-berlin.de>"]
readme = "README.md"

# docs-deps-start
[tool.poetry.dependencies]
python = "^3.9"
torch = "2.0.0"  # locking for now as pytorch has a dependency problem right now
numpy = "^1.24.1"
timm = "^0.9.2"
transformers = "^4.26.0"
appdirs = "^1.4.4"
lmdb = { version = "^1.4.0", optional = true }
bigearthnet-encoder = { version = "^0.3.0", optional = true }
pytorch-lightning = { version = "^2.0.0", optional = true }
matplotlib = { version = "^3.6.3", optional = true }
scikit-learn = { version = "^1.2.1", optional = true }
lightning-bolts = { version = "^0.6.0", optional = true }
fvcore = { version = "^0.1.5.post20221221", optional = true }
pyarrow = "^12.0.1"
pydantic = "^1.8" # version 2 is incompatible with bigearthnet-encoder

[tool.poetry.group.extra.dependencies]
lmdb = "^1.4.0"
bigearthnet-encoder = "^0.3.0"
pytorch-lightning = "^2.0.0"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.1"
lightning-bolts = "^0.6.0"
fvcore = "^0.1.5.post20221221"
psutil = "^5.9.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.1.0"
pre-commit = "^3.0.2"
pytest-mock = "^3.10.0"
furo = "^2022.03.23"
myst-nb = "^0.17.1"
sphinx-autobuild = "^2021.3.14"
sphinxcontrib-bibtex = "^2.5.0"
common-nb-preprocessors = "^1.1.1"
jupyterlab = "^3.6.1"
tensorboardx = "^2.6"
pytest-xdist = "^3.3.1"
# docs-deps-end

[tool.poetry.group.example.dependencies]
wandb = "^0.13.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
